Complementação das traduções; adições de novos testes ao README e atualização de um

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -93,7 +93,8 @@
 		"send": "Send",
 		"nextStep": "Next step",
 		"login": "Login",
-		"register": "Create account"
+		"register": "Create account",
+		"save": "Save"
 	},
 	"title": "Selection System - IFAL",
 	"description": "Participate in selections in courses of the Federal Institute of Alagoas.",
